--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: ./api
     command: node index.js
+    ports:
+      - "3001:80"
     networks:
       - private-network
     depends_on:
@@ -31,7 +33,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
       # to intialize the sql data
-      - ./sql_scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./sql_scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432"
     networks:
