--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     build:
       context: ./api
     command: node index.js
+    environment: 
+    - ENV CONNECTON_STRING=./db
     ports:
       - "3001:80"
     networks:
