--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
       # to intialize the sql data
-      # - ./sql_scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./sql_scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432"
     networks:
