--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:10-alpine
-ENV NODE_ENV=production
-# Create app directory
+
 WORKDIR /usr/src/app
-COPY ["package.json", "package-lock.json*", "npm-shrinkwrap.json*", "./"]
-RUN npm install --production --silent && mv node_modules ../
+
+COPY package*.json ./
+
+RUN npm install
 COPY . .
+
 EXPOSE 3000
-RUN chown -R node /usr/src/app
-USER node
-CMD ["node", "index.js"]
+CMD [ "node", "index.js" ]
